DigicielFull/force-app/main/default/objects/amc__Project_Request__c/fields/amc__Account__c.field-meta.xml
<CustomField>
    <fullName>amc__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Account this Project Request was generated from</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Requests</relationshipLabel>
    <relationshipName>Project_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>