DigicielFull/force-app/main/default/objects/amc__Project_Request__c/fields/amc__Case__c.field-meta.xml
<CustomField>
    <fullName>amc__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Case this Project Request was generated from</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Project Requests</relationshipLabel>
    <relationshipName>Project_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>