DigicielFull/force-app/main/default/objects/amc__Project_Request__c/fields/amc__Generate_Project__c.field-meta.xml
<CustomField>
    <fullName>amc__Generate_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set this field to TRUE to auto-generate the Project</inlineHelpText>
    <label>Generate Project</label>
    <type>Checkbox</type>
</CustomField>