DigicielFull/force-app/main/default/objects/amc__Project_Request__c/fields/amc__Lead__c.field-meta.xml
<CustomField>
    <fullName>amc__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Lead this Project Request was generated from</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Project Requests</relationshipLabel>
    <relationshipName>Project_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>