DigicielFull/force-app/main/default/objects/amc__Project_Request__c/fields/amc__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>amc__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Opportunity this Project Request was generated from</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Project Requests</relationshipLabel>
    <relationshipName>Project_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>