DigicielFull/force-app/main/default/objects/amc__Project_Request__c/fields/amc__Project__c.field-meta.xml
<CustomField>
    <fullName>amc__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Project this request generated.</inlineHelpText>
    <label>Project</label>
    <referenceTo>amc__Project__c</referenceTo>
    <relationshipLabel>Project Requests (Project)</relationshipLabel>
    <relationshipName>Project_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>