DigicielFull/force-app/main/default/objects/amc__Project_Request__c/fields/amc__Project_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Name__c</fullName>
    <inlineHelpText>Identifies the name to use when creating the Project</inlineHelpText>
    <label>Project Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>