DigicielFull/force-app/main/default/objects/amc__Project_Request__c/fields/amc__Project_Template__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Project that will be used as a Template when auto-generating a new Project from this Project Request</inlineHelpText>
    <label>Project Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>amc__Project__c.amc__Template__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>amc__Project__c</referenceTo>
    <relationshipLabel>Project Requests</relationshipLabel>
    <relationshipName>Project_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>