DigicielFull/force-app/main/default/objects/amc__Project_Request__c/fields/amc__Proposed_Budget__c.field-meta.xml
<CustomField>
    <fullName>amc__Proposed_Budget__c</fullName>
    <inlineHelpText>Identifies the anticipated budget required to deliver this Project</inlineHelpText>
    <label>Proposed Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>